--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
@@ -123,10 +123,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Common.h" />
+    <ClInclude Include="ConcurrentAllocate.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="ThreadCache.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="UnitTest.cpp" />
+    <ClCompile Include="ThreadCache.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
