ADD CentralCache frame & finish FetchFromCentralCache in ThreadCache

--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
@@ -123,12 +123,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CentralCache.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="ConcurrentAllocate.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="ThreadCache.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CentralCache.cpp" />
     <ClCompile Include="UnitTest.cpp" />
     <ClCompile Include="ThreadCache.cpp" />
   </ItemGroup>
