--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
@@ -127,10 +127,12 @@
     <ClInclude Include="Common.h" />
     <ClInclude Include="ConcurrentAllocate.h" />
     <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="PageCache.h" />
     <ClInclude Include="ThreadCache.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CentralCache.cpp" />
+    <ClCompile Include="PageCache.cpp" />
     <ClCompile Include="UnitTest.cpp" />
     <ClCompile Include="ThreadCache.cpp" />
   </ItemGroup>
