--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="CentralCache.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PageCache.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThreadCache.cpp">
@@ -39,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CentralCache.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PageCache.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
