Using RadixTree replace with unordered_map

--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj
@@ -79,6 +79,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -90,6 +91,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <Profile>true</Profile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -128,6 +130,7 @@
     <ClInclude Include="ConcurrentAllocate.h" />
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="PageCache.h" />
+    <ClInclude Include="PageMap.h" />
     <ClInclude Include="ThreadCache.h" />
   </ItemGroup>
   <ItemGroup>
