--- a/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
+++ b/ConcurrentMemoryPool/ConcurrentMemoryPool.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="PageCache.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PageMap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThreadCache.cpp">
